--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -5,5 +5,14 @@
     padding: 5px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    background-color: rgba(128, 128, 128, 0.479);
+    background-color: rgba(12, 103, 139, 0.205);
+}
+h3 {
+    color: black;
+    font-size: 30px;
+}
+
+.NavBar{
+    font-weight: bold;
+    font-size: 20px;
 }
